# ftpsrv

./: CMakeLists.txt  README.md
.github/workflows/: build_switch.yml
assets/: config.ini.template
src/: ftpsrv.c
src/log/: log.c
src/platform/3ds/: main.c
src/platform/nx/: custom_commands.c  main.c  main_sysmod.c  sysftp.json  vfs_nx.c  vfs_nx.h
src/platform/nx/vfs/: vfs_nx_fs.c  vfs_nx_fs.h  vfs_nx_gc.c  vfs_nx_gc.h  vfs_nx_hdd.h  vfs_nx_none.h  vfs_nx_root.h  vfs_nx_save.c  vfs_nx_save.h  vfs_nx_stdio.h  vfs_nx_storage.h
